--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,3 +18,12 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/cookie-banner";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+.search-panel {
+    background: govuk-colour("light-grey");
+}
+
+.button-link {
+    padding: 5px 10px;
+    margin: 0;
+    display: inline-block;
+}
