Allow research session data to be setup

--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -9,6 +9,10 @@
                 text: "GOV.UK Prototype Kit v9.8.0"
             },
             {
+                href: "/setup",
+                text: "Setup data"
+            },
+            {
                 href: "/prototype-admin/clear-data",
                 text: "Clear data"
             }
