--- a/app/views/release/search.html
+++ b/app/views/release/search.html
@@ -1,5 +1,6 @@
 {% extends "release/layout.html" %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% set currentPage = 'search' %}
 
 {% block pageTitle %}
   Manage prison release
