Add Inbox to primary nav

--- a/app/views/release/layout.html
+++ b/app/views/release/layout.html
@@ -92,6 +92,9 @@
                   href: '/release/todo',
                   active: currentPage == 'todo'
               }, {
+                  text: 'Inbox',
+                  href: '/'
+              }, {
                   text: 'Settings',
                   href: '/'
               }
