Add case overview page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -27,3 +27,7 @@ $govuk-assets-path: '/govuk/assets/';
     margin: 0;
     display: inline-block;
 }
+
+.empty {
+    color: govuk-colour("mid-grey");
+}
