Add case milestones page

--- a/app/views/release/case/_navigation.html
+++ b/app/views/release/case/_navigation.html
@@ -7,7 +7,7 @@
       active: currentPage == 'overview'
     }, {
       text: 'Milestones',
-      href: '#2',
+      href: '/release/case/milestones',
       active: currentPage == 'milestones'
     }, {
       text: 'Documents',
