--- a/app/views/release/case/milestones.html
+++ b/app/views/release/case/milestones.html
@@ -2,6 +2,7 @@
 {%- from "moj/components/identity-bar/macro.njk" import mojIdentityBar -%}
 {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
 {%- from "moj/components/task-list/macro.njk" import mojTaskList -%}
+{%- from "moj/components/banner/macro.njk" import mojBanner -%}
 
 {% block pageTitle %}
   John Smith - Manage prison release
@@ -26,16 +27,29 @@
 
 {% block content %}
 
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      {% if query['notify-prison'] %}
+        {{ mojBanner({
+          type: 'success',
+          text: 'You have notified the prison of the tariff expiry date',
+          iconFallbackText: 'Success'
+        }) }} 
+      {% endif %}
+
       <ol class="moj-task-list">
         <li>
           <h2 class="moj-task-list__section">
             <span class="moj-task-list__section-number">1. </span>Check dates</h2>
           <ul class="moj-task-list__items">
             <li class="moj-task-list__item">
-              <a class="moj-task-list__task-name" href="#tariff_expiration_date">Check tariff expiration date</a>
-              {{ govukTag({text: "Not started", classes: "govuk-tag--grey"}) }}
+              <a class="moj-task-list__task-name" href="/release/case/calculate-tariff-expiration-date">Check tariff expiration date</a>
+              {% if data['notify-prison'] %}
+                {{ govukTag({text: "Complete", classes: "moj-task-list__task-completed"}) }}
+              {% else %}
+                {{ govukTag({text: "Not started", classes: "govuk-tag--grey"}) }}
+              {% endif%}
             </li>
             
             <li class="moj-task-list__item">
