Add documents page

--- a/app/views/release/case/_navigation.html
+++ b/app/views/release/case/_navigation.html
@@ -11,8 +11,9 @@
       active: currentPage == 'milestones'
     }, {
       text: 'Documents',
-      href: '#3',
+      href: '/release/case/documents',
       active: currentPage == 'documents'
+    
     }, {
       text: 'Parties',
       href: '#4'
