--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -23,8 +23,9 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .button-link {
-    padding: 5px 10px;
+    padding: 5px 0;
     margin: 0;
+    margin-top: 10px;
     display: inline-block;
 }
 
