--- a/app/views/release/search.html
+++ b/app/views/release/search.html
@@ -1,5 +1,7 @@
 {% extends "release/layout.html" %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{%- from "moj/components/search/macro.njk" import mojSearch -%}
+
 {% set currentPage = 'search' %}
 
 {% block pageTitle %}
@@ -14,45 +16,21 @@
         </h1>
 
         <form action="" method="get" class="govuk-!-padding-5 govuk-!-margin-bottom-9 search-panel">
-          <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-third">
-              <div class="govuk-form-group">
-                <label class="govuk-label moj-search__label govuk-!-font-weight-bold" for="prison-number">
-                  Prison number
-                </label>
-                <span id="prison-number-hint" class="govuk-hint moj-search__hint ">
-                  Enter full or partial number
-                </span>
-                <input class="govuk-input moj-search__input" id="prison-number" name="prison-number" type="search" aria-describedby="prison-number-hint">
-              </div>
+          <div class="moj-search">
+            <div class="govuk-form-group">
+              <label class="govuk-label moj-search__label govuk-!-font-weight-bold" for="search">
+                Enter prison, file reference number or offender’s name
+              </label>
+              <span id="search-hint" class="govuk-hint moj-search__hint ">
+                Enter full or partial number
+              </span>
+              <input class="govuk-input moj-search__input " id="search" name="search" type="search" aria-describedby="search-hint">
             </div>
-            <div class="govuk-grid-column-one-third">
-              <div class="govuk-form-group">
-                <label class="govuk-label moj-search__label govuk-!-font-weight-bold" for="file-reference-number">
-                  File reference number
-                </label>
-                <span id="file-reference-number-hint" class="govuk-hint moj-search__hint ">
-                  Enter full or partial number
-                </span>
-                <input class="govuk-input moj-search__input" id="file-reference-number" name="file-reference-number" type="search" aria-describedby="file-reference-number-hint">
-              </div>
-            </div>
-            <div class="govuk-grid-column-one-third">
-              <div class="govuk-form-group">
-                <label class="govuk-label moj-search__label govuk-!-font-weight-bold" for="name-number">
-                  First name or family name
-                </label>
-                <span id="name-hint" class="govuk-hint moj-search__hint ">
-                  Enter full or partial name
-                </span>
-                <input class="govuk-input moj-search__input" id="name-number" name="name-number" type="search" aria-describedby="name-hint">
-              </div>
-            </div>
+            <button type="submit" class="govuk-button moj-search__button " data-module="govuk-button">
+              Search
+            </button>
           </div>
           <input type="hidden" name="results" value="1">
-          <button type="submit" class="govuk-button govuk-!-margin-0" data-module="govuk-button">
-            Search
-          </button>
           <a href="#" class="govuk-link button-link govuk-body-m">
             Show extra search criteria
           </a>
