Make sure the "Add tariff expiry" link works

--- a/app/views/release/case/overview.html
+++ b/app/views/release/case/overview.html
@@ -131,7 +131,7 @@
               actions: {
                 items: [
                   {
-                    href: "#add-tariff-expiry",
+                    href: "/release/case/calculate-tariff-expiration-date",
                     text: "Add",
                     visuallyHiddenText: "tariff expiry date"
                   }
