Change todo priorities to low or high

--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -54,7 +54,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "High"
               },
               {
                 html: viewButton
@@ -74,7 +74,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "High"
               },
               {
                 html: viewButton
@@ -94,7 +94,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "Low"
               },
               {
                 html: viewButton
@@ -154,7 +154,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "Low"
               },
               {
                 html: viewButton
@@ -177,7 +177,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "Low"
               },
               {
                 html: viewButton
@@ -200,7 +200,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "white"
+                text: "High"
               },
               {
                 html: viewButton
