Add offender current location

--- a/app/views/release/case/overview.html
+++ b/app/views/release/case/overview.html
@@ -49,6 +49,14 @@
             },
             {
               key: {
+                text: "Current location"
+              },
+              value: {
+                html: "HMP Leeds"
+              }
+            },
+            {
+              key: {
                 text: "Flags"
               },
               value: {
