Add link to mock sentencing remarks

--- a/app/views/release/case/documents.html
+++ b/app/views/release/case/documents.html
@@ -141,7 +141,7 @@
             ],
             [
               {
-                html: "<a href='#document'>Sentencing remarks</a>"
+                html: "<a href='/public/files/judge_s_report_mock_up.pdf'>Sentencing remarks</a>"
               },
               {
                 text: "PDF"
