--- a/app/views/release/case/calculate-tariff-expiration-date.html
+++ b/app/views/release/case/calculate-tariff-expiration-date.html
@@ -102,7 +102,7 @@
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
             <li>
-              <a href="#">
+              <a href="/public/files/judge_s_report_mock_up.pdf">
                 Sentencing remarks
               </a> (PDF)
             </li>
