--- a/app/views/release/case/milestones.html
+++ b/app/views/release/case/milestones.html
@@ -44,7 +44,7 @@
           <ul class="moj-task-list__items">
             <li class="moj-task-list__item">
               <a class="moj-task-list__task-name" href="/release/case/calculate-tariff-expiration-date">Check tariff expiration date</a>
-              {% if data['notify-prison'] %}
+              {% if data['minimum_term-years'] %}
                 {{ govukTag({text: "Complete", classes: "moj-task-list__task-completed"}) }}
               {% else %}
                 {{ govukTag({text: "Not started", classes: "govuk-tag--grey"}) }}
