update on to do
changed Low priority to high priority

--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -94,7 +94,7 @@
                 text: "Review caseworker"
               },
               {
-                text: "Low"
+                text: "High"
               },
               {
                 html: viewButton
