--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -14,7 +14,7 @@
         </h1>
 
         <h2 class="govuk-heading-m">
-          <span class="govuk-!-font-size-48">3</span> new cases to review
+          <span class="govuk-!-font-size-48">3</span> new cases
         </h2>
         {% set viewButton = "<a href='/release/case/overview'>View</a>" %}
         {{ govukTable({
@@ -51,7 +51,7 @@
                 text: "Indeterminate"
               },
               {
-                text: "Review caseworker"
+                text: "Initial Action"
               },
               {
                 text: "High"
@@ -71,7 +71,7 @@
                 text: "Indeterminate"
               },
               {
-                text: "Review caseworker"
+                text: "Initial Action"
               },
               {
                 text: "High"
@@ -91,7 +91,7 @@
                 text: "Indeterminate"
               },
               {
-                text: "Review caseworker"
+                text: "Initial Action"
               },
               {
                 text: "High"
