--- a/app/views/release/case/calculate-tariff-expiration-date.html
+++ b/app/views/release/case/calculate-tariff-expiration-date.html
@@ -13,13 +13,13 @@
 {% endblock %}
 
 {% block identityBar %}
-{{ 
+{{
   mojIdentityBar({
     title: {
       html: "123456789 <b style='margin: 0 15px'>John Smith</b>" + govukTag({text: "High public interest", classes: "govuk-tag--red"})
     }
-  }) 
-}} 
+  })
+}}
 {% endblock %}
 
 {% block subNavigation %}
@@ -45,7 +45,31 @@
             }
           },
           hint: {
-            text: "This is the order for imprisonment"
+            text: "This is usually found in the sentencing remarks"
+          },
+          items: [
+            {
+              classes: "govuk-input--width-2",
+              name: "years"
+            },
+            {
+              classes: "govuk-input--width-2",
+              name: "months"
+            }
+          ]
+        }) }}
+
+        {{ govukDateInput({
+          id: "remand_time",
+          namePrefix: "remand_time",
+          fieldset: {
+            legend: {
+              text: "Enter time spent in remand",
+              isPageHeading: false
+            }
+          },
+          hint: {
+            text: "This can be found in the sentencing remarks or the warrant"
           },
           items: [
             {
@@ -66,7 +90,7 @@
                 text: "Sentence start date"
               },
               value: {
-                text: "12 March 1990"
+                text: "21 February 2001"
               },
               actions: {
                   items: [
@@ -79,10 +103,6 @@
                 }
             }
           ]
-        }) }}
-        
-        {{ govukInsetText({
-          text: "Judge has accepted the remand time"
         }) }}
 
         {{ govukButton({
@@ -102,7 +122,7 @@
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
             <li>
-              <a href="/public/files/judge_s_report_mock_up.pdf">
+              <a href="/public/files/judges_report_mock_up.pdf">
                 Sentencing remarks
               </a> (PDF)
             </li>
