Make the milestones the first case page

--- a/app/views/release/todo.html
+++ b/app/views/release/todo.html
@@ -16,7 +16,7 @@
         <h2 class="govuk-heading-m">
           <span class="govuk-!-font-size-48">3</span> new cases
         </h2>
-        {% set viewButton = "<a href='/release/case/overview'>View</a>" %}
+        {% set viewButton = "<a href='/release/case/milestones'>View</a>" %}
         {{ govukTable({
           firstCellIsHeader: false,
           head: [
