--- a/app/views/release/case/confirm-tariff-expiration-date.html
+++ b/app/views/release/case/confirm-tariff-expiration-date.html
@@ -11,13 +11,7 @@
 {% endblock %}
 
 {% block identityBar %}
-{{
-  mojIdentityBar({
-    title: {
-      html: "123456789 <b style='margin: 0 15px'>John Smith</b>" + govukTag({text: "High public interest", classes: "govuk-tag--red"})
-    }
-  })
-}}
+  {% include "release/case/_identity_bar.html" %}
 {% endblock %}
 
 {% block subNavigation %}
