Make tariff expiry and first review dates global

--- a/app/views/release/case/confirm-tariff-expiration-date.html
+++ b/app/views/release/case/confirm-tariff-expiration-date.html
@@ -38,7 +38,7 @@
                 text: "Tariff expiration date"
               },
               value: {
-                text: "21 June 2025"
+                text: config.tariffExpiryDate
               }
             },
             {
@@ -46,7 +46,7 @@
                 text: "First Review date"
               },
               value: {
-                text: "21 December 2025"
+                text: config.firstReviewDate
               }
             }
           ]
