Be explicit about when dates calculated mean task complete

--- a/app/views/release/case/calculate-tariff-expiration-date.html
+++ b/app/views/release/case/calculate-tariff-expiration-date.html
@@ -99,6 +99,8 @@
           ]
         }) }}
 
+        <input type="hidden" name="dates-calculated" value="1">
+
         {{ govukButton({
           text: "Calculate"
         }) }}
