--- a/app/views/release/case/overview.html
+++ b/app/views/release/case/overview.html
@@ -128,7 +128,7 @@
           About the tariff
         </h2>
 
-        {% if data['minimum_term-years'] %}
+        {% if data['dates-calculated'] %}
           {% set tariffDateHtml = config.tariffExpiryDate %}
           {% set reviewDateHtml = config.firstReviewDate %}
           {% set tariffActions = [] %}
