Add the check documentation pages

--- a/app/views/release/case/_identity_bar.html
+++ b/app/views/release/case/_identity_bar.html
@@ -2,7 +2,7 @@
 {{ 
   mojIdentityBar({
     title: {
-      html: "A721445 <b style='margin: 0 15px'>John Smith</b> DOB: <b style='margin-right: 15px'>20 September 1976</b>" + govukTag({text: "High public interest", classes: "govuk-tag--red"})
+      html: "A721445 <b style='margin: 0 15px'>Matt Johnson</b> DOB: <b style='margin-right: 15px'>20 September 1976</b>" + govukTag({text: "High public interest", classes: "govuk-tag--red"})
     }
   }) 
 }} 
