--- a/app/views/release/case/milestones.html
+++ b/app/views/release/case/milestones.html
@@ -5,7 +5,7 @@
 {%- from "moj/components/banner/macro.njk" import mojBanner -%}
 
 {% block pageTitle %}
-  John Smith - Manage prison release
+  Matt Johnson - Manage prison release
 {% endblock %}
 
 {% block identityBar %}
