Add example documents and links

--- a/app/views/release/case/check-documentation.html
+++ b/app/views/release/case/check-documentation.html
@@ -91,7 +91,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
           rows: [
             [
               {
-                html: "<a href='#document'>PAROM1</a>"
+                html: "<a href='/public/files/PAROM 1 edited.pdf'>PAROM1</a>"
               },
               {
                 text: "PDF"
@@ -119,7 +119,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
             ],
             [
               {
-                html: "<a href='#document'>Offender Manager's report</a>"
+                html: "<a href='/public/files/SPR L.pdf'>Offender Manager's report</a>"
               },
               {
                 text: "PDF"
@@ -133,7 +133,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
             ],
             [
               {
-                html: "<a href='#document'>Pre-sentence report</a>"
+                html: "<a href='/public/files/PSR.pdf'>Pre-sentence report</a>"
               },
               {
                 text: "PDF"
@@ -146,7 +146,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
               }
             ],[
               {
-                html: "<a href='#document'>Sentencing Judge's remarks</a>"
+                html: "<a href='/public/files/Sentencing remarks.pdf'>Sentencing Judge's remarks</a>"
               },
               {
                 text: "PDF"
