--- a/app/views/release/case/milestones.html
+++ b/app/views/release/case/milestones.html
@@ -66,7 +66,7 @@
             </li>
             
             <li class="moj-task-list__item">
-              <a class="moj-task-list__task-name" href="#risk-assessments">Risk assessments</a>
+              <a class="moj-task-list__task-name" href="/release/case/check-documentation">Check documentation</a>
               {{ govukTag({text: "Not started", classes: "govuk-tag--grey"}) }}
             </li>
             
