Update incorrect author names for documents

--- a/app/views/release/case/check-documentation-issues.html
+++ b/app/views/release/case/check-documentation-issues.html
@@ -86,7 +86,7 @@
                 html: checkboxHtml
               },
               {
-                html: "<a href='#document'>PAROM1</a>"
+                html: "<a href='/public/files/PAROM 1 edited.pdf'>PAROM1</a>"
               },
               {
                 text: "PDF"
@@ -103,7 +103,7 @@
                 html: checkboxHtml
               },
               {
-                html: "<a href='#document'>OASys</a>"
+                html: "<a href='/public/files/OASys Assessment.pdf'>OASys</a>"
               },
               {
                 text: "PDF"
@@ -112,7 +112,7 @@
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Tom Mariott"
               }
             ],
             [
@@ -120,7 +120,7 @@
                 html: checkboxHtml
               },
               {
-                html: "<a href='#document'>Offender Manager's report</a>"
+                html: "<a href='/public/files/SPR L.pdf'>SPR-L</a>"
               },
               {
                 text: "PDF"
@@ -129,7 +129,7 @@
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Sheila Rock"
               }
             ],
             [
@@ -137,7 +137,7 @@
                 html: checkboxHtml
               },
               {
-                html: "<a href='#document'>Pre-sentence report</a>"
+                html: "<a href='/public/files/PSR.pdf'>Pre-sentence report</a>"
               },
               {
                 text: "PDF"
@@ -146,14 +146,14 @@
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Mark Will"
               }
             ],[
               {
                 html: checkboxHtml
               },
               {
-                html: "<a href='#document'>Sentencing Judge's remarks</a>"
+                html: "<a href='/public/files/Sentencing remarks.pdf'>Sentencing Judge's remarks</a>"
               },
               {
                 text: "PDF"
@@ -162,23 +162,7 @@
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
-              }
-            ],[
-              {
-                html: checkboxHtml
-              },
-              {
-                html: "<a href='#document'>SARN</a>"
-              },
-              {
-                text: "PDF"
-              },
-              {
-                text: "Yes"
-              },
-              {
-                html: "Douglas Heen"
+                html: "Alex Rock"
               }
             ]
           ]
