--- a/app/views/release/case/check-documentation.html
+++ b/app/views/release/case/check-documentation.html
@@ -105,7 +105,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
             ],
             [
               {
-                html: "<a href='#document'>OASys</a>"
+                html: "<a href='/public/files/OASys Assessment.pdf'>OASys</a>"
               },
               {
                 text: "PDF"
@@ -114,12 +114,12 @@ When possible, they’ve been automatically checked to ensure that:</p>
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Tom Mariott"
               }
             ],
             [
               {
-                html: "<a href='/public/files/SPR L.pdf'>Offender Manager's report</a>"
+                html: "<a href='/public/files/SPR L.pdf'>SPR-L</a>"
               },
               {
                 text: "PDF"
@@ -128,7 +128,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Sheila Rock"
               }
             ],
             [
@@ -142,7 +142,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
+                html: "Mark Will"
               }
             ],[
               {
@@ -155,20 +155,7 @@ When possible, they’ve been automatically checked to ensure that:</p>
                 text: "Yes"
               },
               {
-                html: "Douglas Heen"
-              }
-            ],[
-              {
-                html: "<a href='#document'>SARN</a>"
-              },
-              {
-                text: "PDF"
-              },
-              {
-                text: "Yes"
-              },
-              {
-                html: "Douglas Heen"
+                html: "Alex Rock"
               }
             ]
           ]
