--- a/app/views/release/case/rerequest-documents.html
+++ b/app/views/release/case/rerequest-documents.html
@@ -51,7 +51,7 @@
                 text: "PDF"
               },
               {
-                text: "HMPPS - Julie Young, Probation Officer"
+                text: "HMPPS - Douglas Heen, Probation Officer"
               }
             ]
           ]
